Added Visibility option to posts

--- a/_posts/2014-8-1-about.md
+++ b/_posts/2014-8-1-about.md
@@ -1,6 +1,7 @@
 ---
 title: About
 comments: false
+visible: false
 permalink: /about
 ---
 Hi, my name is Adrian, but mostly I go by Flafla2 online.  I am currently in my Junior year of high school, and I really like to program.  My main hobby is making video games, using either Unity3D or my own 2D engine, [Remote2D](https://github.com/Flafla2/Remote2D-Engine).  I also have done some arduino work and a minimal amount of work with the oculus rift.  Of course, I have a bit of web design under my belt, as you can see with this site.  In the future, I would like to do more work in interactive design and graphics programming, probably in Unity3D.
