Finish/Publish the Perlin Noise Article, style updates, addded copyright notice

--- a/_posts/2014-08-01-about.md
+++ b/_posts/2014-08-01-about.md
@@ -4,8 +4,10 @@ comments: false
 visible: false
 permalink: /about
 ---
-Hi, my name is Adrian, but mostly I go by Flafla2 online.  I am currently in my Junior year of high school, and I really like to program.  My main hobby is making video games, using either Unity3D or my own 2D engine, [Remote2D](https://github.com/Flafla2/Remote2D-Engine).  I also have done some arduino work and a minimal amount of work with the oculus rift.  Of course, I have a bit of web design under my belt, as you can see with this site.  In the future, I would like to do more work in interactive design and graphics programming, probably in Unity3D.
+Hi, my name is Adrian Biagioli, but mostly I go by Flafla2 online.  I am currently in my Junior year of high school, and I really like to program.  My main hobby is making video games, using either Unity3D or my own 2D engine, [Remote2D](https://github.com/Flafla2/Remote2D-Engine).  I also have done some arduino work and a minimal amount of work with the oculus rift.  Of course, I have a bit of web design under my belt, as you can see with this site.  In the future, I would like to do more work in interactive design and graphics programming, probably in Unity3D.
 
 As far as languages go, I have worked in Java, C#, HTML/CSS (if that counts), Javascript, and a small amount of C++.  You can check out my github [here](https://github.com/Flafla2) to see what I have done for yourself.
 
 This website is a spew of whatever I am currently working on, or just stuff that I feel like talking about.  Under the hood, it is powered by [Jekyll](http://jekyllrb.com) and hosted by [Github Pages](http://pages.github.com).
+
+As far as copyright goes, you can pretty much do whatever you want, provided it is within the rights granted by the [Creative Commmons 4.0 International Attribution Licensee](http://creativecommons.org/licenses/by/4.0/).  Most notably you must attribute me (Adrian Biagioli) before sourcing any of my work.  Thank you for understanding.
