Changed title to 'adrians soapbox', changed about page

--- a/_posts/2014-08-01-about.md
+++ b/_posts/2014-08-01-about.md
@@ -4,9 +4,11 @@ comments: false
 visible: false
 permalink: /about
 ---
-Hi, my name is Adrian Biagioli, but mostly I go by Flafla2 online.  I am currently in my Junior year of high school, and I really like to program.  My main hobby is making video games, using either Unity3D or my own 2D engine, [Remote2D](https://github.com/Flafla2/Remote2D-Engine).  I also have done some arduino work and a minimal amount of work with the oculus rift.  Of course, I have a bit of web design under my belt, as you can see with this site.  In the future, I would like to do more work in interactive design and graphics programming, probably in Unity3D.
+Hi, my name is Adrian Biagioli.  I am currently in my Senior year of high school.  I like to create interactive 3D experiences and research new ways to promote interaction between users and their devices.  With new advances in VR and AR, I am excited to see what new levels of presence can be achieved.
 
-As far as languages go, I have worked in Java, C#, HTML/CSS (if that counts), Javascript, and a small amount of C++.  You can check out my github [here](https://github.com/Flafla2) to see what I have done for yourself.
+On the hardware side: I have experience working with the Arduino prototyping platform and with the Oculus Rift HMD (head-mounted display).
+
+On the software side: right now the majority of my work is in the Unity3D game engine.  I am currently exploring the fields of interactive design (that is, the interaction between humans and their devices, specifically in 3D applications) and computer graphics (rendering techniques to create convincing virtual worlds).  As far as languages go, I am proficient in Java, C++, C#, Javascript (and jQuery), HTML (and HTML5), CSS (and CSS3), and shader languages such as Cg and GLSL.  You can check out my github [here](https://github.com/Flafla2) to see what I have done for yourself.
 
 This website is a spew of whatever I am currently working on, or just stuff that I feel like talking about.  Under the hood, it is powered by [Jekyll](http://jekyllrb.com) and hosted by [Github Pages](http://pages.github.com).
 
