Update About page with gloating

--- a/_posts/2014-08-01-about.md
+++ b/_posts/2014-08-01-about.md
@@ -4,11 +4,13 @@ comments: false
 visible: false
 permalink: /about
 ---
-Hi, my name is Adrian Biagioli.  I am currently in my Senior year of high school.  I like to create interactive 3D experiences and research new ways to promote interaction between users and their devices.  With new advances in VR and AR, I am excited to see what new levels of presence can be achieved.
+Hi, my name is Adrian Biagioli.  I am currently in my Senior year of high school, and I will be attending Carnegie Mellon University's School of Computer Science beginning this fall.  I like to create interactive 3D experiences and research new ways to promote interaction between users and their devices.  With new advances in VR and AR, I am excited to see what new levels of presence can be achieved.
 
-On the hardware side: I have experience working with the Arduino prototyping platform and with the Oculus Rift HMD (head-mounted display).
+On the hardware side: I have experience working with the Arduino prototyping platform.  I also have extensive experience developing for the Oculus Rift DK2.  I have worked with the SteamVR platform as well and the HTC Vive.
 
-On the software side: right now the majority of my work is in the Unity3D game engine.  I am currently exploring the fields of interactive design (that is, the interaction between humans and their devices, specifically in 3D applications) and computer graphics (rendering techniques to create convincing virtual worlds).  As far as languages go, I am proficient in Java, C++, C#, Javascript (and jQuery), HTML (and HTML5), CSS (and CSS3), and shader languages such as Cg and GLSL.  You can check out my github [here](https://github.com/Flafla2) to see what I have done for yourself.
+I am a [Unity Certified Developer](https://certification.unity.com/certification-lookup?last_name=Biagioli&certification_id=2016031-5C437) as of April, 2016.
+
+On the software side: right now the majority of my work is in the Unity game engine.  I am currently exploring the fields of interactive design (that is, the interaction between humans and their devices, specifically in 3D applications) and computer graphics (rendering techniques to create convincing virtual worlds).  As far as languages go, I am proficient in Java, C++, C#, Javascript (and jQuery), HTML (and HTML5), CSS (and CSS3), and shader languages such as Cg and GLSL.  You can check out my github [here](https://github.com/Flafla2) to see what I have done for yourself.
 
 This website is a spew of whatever I am currently working on, or just stuff that I feel like talking about.  Under the hood, it is powered by [Jekyll](http://jekyllrb.com) and hosted by [Github Pages](http://pages.github.com).
 
