Fix minor formatting errors with H3 headers

--- a/_posts/2015-02-14-bunnyhop.md
+++ b/_posts/2015-02-14-bunnyhop.md
@@ -22,13 +22,13 @@ Air Strafing
 
 The most important component of bunnyhopping is the concept of *Air Strafing*.  In the clip above you may notice the player quickly wiggle his mouse left and right.  When he does this, he syncs his mouse movement with his movement keys.  That is, when he moves the mouse to the left he holds the *a* (left movement) key, and when he moves the mouse to the right he holds the *d* (right movement) key.  The result of this from the player&apos;s perspective is a rapid increase in speed.  This explains in part why bunnyhopping is such a skill-based mechanic.  It takes great skill and accuracy to perfectly sync your mouse movement to your movement keys.
 
-##Explaining Air Strafing Mathematically
+### Explaining Air Strafing Mathematically
 
 Air Strafing works because of the way movement acceleration is handled in the Quake Engine.  It is possible in any game that is based off of the Quake engine, such as Source.  If you would like you can check out the [Quake III movement code](https://github.com/id-Software/Quake-III-Arena/blob/master/code/game/bg_pmove.c#L240) or the [Half Life 2 movement code](https://github.com/ValveSoftware/source-sdk-2013/blob/56accfdb9c4abd32ae1dc26b2e4cc87898cf4dc1/sp/src/game/shared/gamemovement.cpp#L1822) on GitHub.  Keep in mind that both codebases contain engine-specific code so they aren&apos;t as easy to integrate as the code in this article.  Nevertheless it is still interesting to see the origins of the mechanic.
 
 In the Quake III acceleration code, movement speed is limited in a very interesting and nonobvious way.  **Instead of limiting velocity directly, only the projection of the current velocity onto acceleration is limited.**  To explain this further, I need to first explain what vector projection is.
 
-###Vector Projection
+### Vector Projection
 
 The projection of a vector *a* onto a vector *b* (also known as the component of *a* onto *b*) is &quot;The orthagonal projection of *a* onto a straight line parallel to *b*&quot; (To quote [Wikipedia](http://en.wikipedia.org/wiki/Vector_projection)).  This concept is illustrated below.
 
@@ -43,7 +43,7 @@ Vector projection can be represented by the equation:
 
 <p>Above, &bull; represents a <a href="http://en.wikipedia.org/wiki/Dot_product">dot product</a> and <span class="math">b&#x302;</span> is the unit vector of b (that is, a vector in the direction of b and a length of 1).  The dot product notation works because a dot product is equal to <code>|a| * |b| * cos(&#x398;)</code>.  This is preferable because it is faster to perform than a cosine calculation.</p>
 
-###Limiting the Projection
+### Limiting the Projection
 
 I&apos;ll repeat here what I said before: *Instead of limiting velocity directly, only the projection of the current velocity onto acceleration is limited.*  This allows the player to exceed the maximum velocity in certain situations.  Recall that in order to airstrafe you must sync your movement keys with your mouse movement.  Let&apos;s model this mathematically:
 
@@ -62,7 +62,7 @@ I&apos;ll repeat here what I said before: *Instead of limiting velocity directly
 
 In the above example, the player is both moving and turning left.  After 4 physics ticks, V<sub>p</sub> passes the server-defined speed limit V<sub>max</sub> and V<sub>a</sub> is truncated to account for this.  Note, however, that V<sub>c</sub> still substantially exceeds V<sub>max</sub>!
 
-###In Code
+### In Code
 
 Here is my implementation of the above concepts in code:
 
