--- a/_posts/2015-02-14-bunnyhop.md
+++ b/_posts/2015-02-14-bunnyhop.md
@@ -8,7 +8,7 @@ This is what bunnyhopping looks like in-game to a skilled player:
 
 <div style="max-width:512px;max-height:auto;display:block;margin-left:auto;margin-right:auto;">
     <div class="media-flex" style="padding-bottom: 56.25%;">
-        <div class='gfyitem' data-controls='false' data-expand='true' data-id="BlackandwhitePiercingDodo"></div><br />
+        <div class='gfyunveil' gfy-name="BlackandwhitePiercingDodo"></div><br />
     </div>
 </div>
 <p style="text-align: center">
