--- a/_posts/2014-08-01-about.md
+++ b/_posts/2014-08-01-about.md
@@ -4,9 +4,9 @@ comments: false
 visible: false
 permalink: /about
 ---
-Hi, my name is Adrian Biagioli.  I am currently in my Senior year of high school, and I will be attending Carnegie Mellon University's School of Computer Science beginning this fall.  I like to create interactive 3D experiences and research new ways to promote interaction between users and their devices.  With new advances in VR and AR, I am excited to see what new levels of presence can be achieved.
+Hi, my name is Adrian Biagioli.  I am currently a student at Carnegie Mellon University's School of Computer Science, pursuing a Bachelor of Science in Computer Science.  I like to create interactive 3D experiences and research new ways to promote interaction between users and their devices.  With new advances in VR and AR, I am excited to see what new levels of presence can be achieved.
 
-On the hardware side: I have experience working with the Arduino prototyping platform.  I also have extensive experience developing for the Oculus Rift DK2.  I have worked with the SteamVR platform as well and the HTC Vive.
+On the hardware side: I have experience working with the Arduino prototyping platform.  I also have extensive experience developing for the Oculus Rift DK2 and Oculus Rift.  I have worked with the SteamVR platform as well and the HTC Vive.
 
 I am a [Unity Certified Developer](https://certification.unity.com/certification-lookup?last_name=Biagioli&certification_id=2016031-5C437) as of April, 2016.
 
