Fixed Problems with gfycat loading

--- a/_posts/2015-02-14-bunnyhop.md
+++ b/_posts/2015-02-14-bunnyhop.md
@@ -6,10 +6,8 @@ title: Bunnyhopping from the Programmer's Perspective
 
 This is what bunnyhopping looks like in-game to a skilled player:
 
-<div style="max-width:512px;max-height:auto;display:block;margin-left:auto;margin-right:auto;">
-    <div class="media-flex" style="padding-bottom: 56.25%;">
-        <div class='gfyunveil' gfy-name="BlackandwhitePiercingDodo"></div><br />
-    </div>
+<div style="max-width:512px;display:block;margin:0 auto;">
+    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="BlackandwhitePiercingDodo"></div>
 </div>
 <p style="text-align: center">
     <i>One Example of Bunnyhopping in Counter-Strike: Source</i> (<a href="https://www.youtube.com/watch?v=KYEyIGLRqW0">Source</a>)
