Added tag pages

--- a/_posts/2015-02-14-bunnyhop.md
+++ b/_posts/2015-02-14-bunnyhop.md
@@ -1,6 +1,6 @@
 ---
 title: Bunnyhopping from the Programmer's Perspective
-tag: Technical Writeup
+tag: tech_writeup
 ---
 
 &quot;Bunnyhopping&quot; is an exploit of a very popular bug in games like *Quake III Arena*, *Half-Life*, and *Counter-Strike*.  Bunnyhopping, or *bhopping* for short, allows a player to exceed the game-defined speed limit.  It has created entirely new methods of play and allows very exciting, fast-paced emergent gameplay.  As a decidedly skill-based mechanic, competitive players love bhopping because it is so hard to master.  Thus, it may be useful to you as a game developer to &quot;implement&quot; bunnyhopping into your game.  The purpose of this article is to define what bunnyhopping is, why it is important to consider as a game developer, and how to implement it mathematically into your FPS movement code.  All code examples are open-source and free to use, as always.
