Fixed undone todo ;)

--- a/_posts/2016-11-28-riley.md
+++ b/_posts/2016-11-28-riley.md
@@ -216,7 +216,7 @@ is quite similar, but in a freer digital medium.
 
 [Link to the work.][superhypercube]
 
-## TODO: LINK VIDEO
+<div class="video-center"><div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/PZm6bFTSreo" frameborder="0" allowfullscreen></iframe></div></div>
 
 One excellent implementation of the aesthetic elements of Op Art in VR is
 Polytron's game SUPERHYPERCUBE.  Superhypercube is a simple game by itself,
