Move video content from gfycat to local storage via Github LFS

--- a/_posts/2015-02-14-bunnyhop.md
+++ b/_posts/2015-02-14-bunnyhop.md
@@ -8,7 +8,10 @@ tag: tech_writeup
 This is what bunnyhopping looks like in-game to a skilled player:
 
 <div style="max-width:512px;display:block;margin:0 auto;">
-    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="BlackandwhitePiercingDodo"></div>
+    <video width="100%" controls autoplay loop muted preload="none">
+		<source src="/gfycat_old/BlackandwhitePiercingDodo.mp4" type="video/mp4" />
+		[Use a browser with video tag to view]
+	</video>
 </div>
 <p style="text-align: center">
     <i>One Example of Bunnyhopping in Counter-Strike: Source</i> (<a href="https://www.youtube.com/watch?v=KYEyIGLRqW0">Source</a>)
