--- a/_posts/2016-11-28-riley.md
+++ b/_posts/2016-11-28-riley.md
@@ -11,7 +11,10 @@ for download, however I intend on releasing it when I have access to a VR
 system again.*
 
 <div style="max-width:512px;display:block;margin:0 auto;">
-    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="ImaginaryGiantAltiplanochinchillamouse"></div>
+  <video width="100%" controls autoplay loop muted preload="none">
+		<source src="/gfycat_old/ImaginaryGiantAltiplanochinchillamouse.mp4" type="video/mp4" />
+		[Use a browser with video tag to view]
+	</video>
 </div><br />
 
 The essential idea of this project is to translate the Op-Art works of painter 
@@ -45,11 +48,17 @@ digital "pamphlet" that provides some information / context about the work that
 the user is currently looking at.  Below is a demonstration of these concepts:
 
 <div style="max-width:512px;display:block;margin:0 auto;">
-    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="QuerulousDapperButterfly"></div>
+  <video width="100%" controls autoplay loop muted preload="none">
+		<source src="/gfycat_old/QuerulousDapperButterfly.mp4" type="video/mp4" />
+		[Use a browser with video tag to view]
+	</video>
 </div>
 <p style="text-align: center"><i>Teleporting and Viewing the work</i></p>
 <div style="max-width:512px;display:block;margin:0 auto;">
-    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="EnchantingElderlyHypacrosaurus"></div>
+  <video width="100%" controls autoplay loop muted preload="none">
+		<source src="/gfycat_old/EnchantingElderlyHypacrosaurus.mp4" type="video/mp4" />
+		[Use a browser with video tag to view]
+	</video>
 </div>
 <p style="text-align: center"><i>Above an abyss</i></p>
 
@@ -79,7 +88,10 @@ Below I list each of the works, along with a corresponding blurb from the pamphl
 > -- Bridget Riley
 
 <div style="max-width:512px;display:block;margin:0 auto;">
-    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="ImaginaryGiantAltiplanochinchillamouse"></div>
+  <video width="100%" controls autoplay loop muted preload="none">
+		<source src="/gfycat_old/ImaginaryGiantAltiplanochinchillamouse.mp4" type="video/mp4" />
+		[Use a browser with video tag to view]
+	</video>
 </div>
 
 Blaze is unique in that it simultaneously captures Riley's ability to render 
@@ -96,7 +108,10 @@ r are you staring down the barrel of a gun?
 > -- Bridget Riley
 
 <div style="max-width:512px;display:block;margin:0 auto;">
-    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="ShadyCelebratedHornedtoad"></div>
+  <video width="100%" controls autoplay loop muted preload="none">
+		<source src="/gfycat_old/ShadyCelebratedHornedtoad.mp4" type="video/mp4" />
+		[Use a browser with video tag to view]
+	</video>
 </div>
 
 Movement in Squares is one of Riley's definitive pieces, and demonstrates her 
@@ -112,7 +127,10 @@ experience this sense of scale more directly.
 > -- Bridget Riley
 
 <div style="max-width:512px;display:block;margin:0 auto;">
-    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="BetterValuableBighorn"></div>
+  <video width="100%" controls autoplay loop muted preload="none">
+		<source src="/gfycat_old/BetterValuableBighorn.mp4" type="video/mp4" />
+		[Use a browser with video tag to view]
+	</video>
 </div>
 
 Fall hurts to look at; that, to me, is what makes it so interesting. In Fall, 
@@ -128,7 +146,10 @@ studied by Riley and introduced me to the basic idea of this project.
 > -- Bridget Riley
 
 <div style="max-width:512px;display:block;margin:0 auto;">
-    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="IckySelfassuredChick"></div>
+  <video width="100%" controls autoplay loop muted preload="none">
+		<source src="/gfycat_old/IckySelfassuredChick.mp4" type="video/mp4" />
+		[Use a browser with video tag to view]
+	</video>
 </div>
 
 Untitled [Fragment 6/9] has a strange sort of unexplainable tension. Upon closer
@@ -146,7 +167,10 @@ similarly imply depth through their size.
 > -- Bridget Riley
 
 <div style="max-width:512px;display:block;margin:0 auto;">
-    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="WetImmediateAstrangiacoral"></div>
+  <video width="100%" controls autoplay loop muted preload="none">
+		<source src="/gfycat_old/WetImmediateAstrangiacoral.mp4" type="video/mp4" />
+		[Use a browser with video tag to view]
+	</video>
 </div>
 
 Untitled [Fragment 3/11] was definitely the most challenging work for me to
@@ -163,7 +187,10 @@ minutes.
 > -- Bridget Riley
 
 <div style="max-width:512px;display:block;margin:0 auto;">
-    <div class="gfyitem" data-autoplay="true" data-responsive="true" data-id="TalkativeTenderAdmiralbutterfly"></div>
+  <video width="100%" controls autoplay loop muted preload="none">
+		<source src="/gfycat_old/TalkativeTenderAdmiralbutterfly.mp4" type="video/mp4" />
+		[Use a browser with video tag to view]
+	</video>
 </div>
 
 Although Riley is most known for her grayscale works (such as the others shown
